# blog

./: .gitignore  .gitlab-ci.yml  README.md  about.md  blog-module.nix  blog-updater.nix  blog.cabal  contact.md  default.nix  index.md  jobsets.json  jobsets.nix  release.nix  shell.nix
content/: about.md  contact.html  contact.md  default.nix  index.html  index.md  location.html  location.md
content/css/: bootstrap.css  custom.css
content/drafts/: 2018-canberra-intro-to-fp.md  backpack-for-initial-and-final-encodings.md  installing-nixos.md  intro-to-state-machine-testing-1.md  intro-to-state-machine-testing-2.md  intro-to-state-machine-testing-3.md  multiple-ghcs.md  nested-routes-in-servant.lhs  packages.md  semigroups.md  sv-1.0.md  working-with-jsaddle.md
content/js/: location-carousel-init.js  mobile-nav-init.js  parallax-init.js
content/links/: 2017-october-fp-course.md  201807-18-20-canberra.md  201810-26-28-brisbane.md  201811-26-28-brisbane.md  2019-10-02-03-workshop.md  20190710-20190712-brisbane-fp-course.md  20200211-20200213-brisbane-fp-course.md  qld-gov-fp-course.md
content/people/: ajmccluskey.md  ajmcmiddlin.md  bkolera.md  dlaing.md  gwilson.md  ielliott.md  schalmers.md  tmorris.md
content/posts/: 2017-week-32-software-calamity.md  (+27 more)
generator/: blog-generator.cabal  blog-generator.nix  blog.nix  default.nix  shell.nix
generator/src/: Links.hs  People.hs  Posts.hs  Projects.hs  Site.hs  Talks.hs
generator/src/People/: Common.hs  Context.hs
generator/src/Posts/: Context.hs
generator/src/Projects/: Common.hs  Context.hs
generator/src/Talks/: Common.hs
generator/src/Util/: Index.hs  Items.hs  Order.hs  Pandoc.hs  Time.hs
growing-a-datepicker/: default.nix  source.json
nix/: growing-a-datepicker.nix  reflex-tutorial.json  reflex-tutorial.nix  update.bash
nixpkgs/: default.nix  source.json
people/: ajmccluskey.md  dlaing.md  gwilson.md  tmorris.md
posts/: getting-started-with-hydra.md  getting-started-with-nix.md  writing-for-the-fp-blog.md
projects/: infra.md  reflex.md
reflex-tutorial/: default.nix
src/: People.hs  Posts.hs  Projects.hs  Site.hs
state-machine-testing/: regfirst.dot  register.dot
templates/: default.html  people-page-snippet.html  people-posts-snippet.html  project-list.html  project-posts-snippet.html  projects.html
(+133 files in other folders)
