name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:             BSD3
license-file:        LICENSE

executable site
  main-is:          Site.hs
  other-modules:    Posts
                  , Posts.Context
                  , People
                  , People.Common
                  , People.Context
                  , Projects
                  , Projects.Common
                  , Projects.Context
                  , Util.Order
                  , Util.Nick
                  , Util.Pandoc
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pandoc
                  , latex-formulae-image
                  , latex-formulae-pandoc
                  , latex-formulae-hakyll
                  , unordered-containers
                  , text
                  , aeson
                  , scientific
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
